[package]
name = "picorun-rust"
version = "0.1.0"
authors = ["Gabie <jacadel1998@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "*", features = ["blocking"] }
rand = "*"
lazy_static = "1.4.0"
futures = "*"
actix-web = "3"
